# hold_the_js

./: .gitignore  manage.py  pyproject.toml
.github/workflows/: build.yml
core/: asgi.py  settings.py  urls.py  wsgi.py
hold_the_js/: settings.py  urls.py  wsgi.py
search/: views.py
search/util/: recipe_base.py  recipe_search_base.py  recipe_search_once_upon_a_chef.py  recipe_search_salt_and_lavender.py
templates/: base.html  home.html
